--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Inter:wght@100..900&display=swap");
 
+:root {
+  --green: hsl(75, 94%, 57%);
+  --white: hsl(0, 0%, 100%);
+  --grey: hsl(0, 0%, 20%);
+  --dark-grey: hsl(0, 0%, 12%);
+  --off-black: hsl(0, 0%, 8%);
+}
+
 body {
   font-family: Inter, Helvetica, sans-serif;
-  background-color: hsl(0, 0%, 8%);
+  background-color: var(--off-black);
   font-weight: 400;
   display: flex;
   justify-content: center;
   align-content: center;
   align-items: center;
-  color: white;
+  color: var(--white);
   height: 100vh;
 }
 
@@ -18,7 +26,7 @@ main {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: hsl(0, 0%, 12%);
+  background-color: var(--dark-grey);
   width: 320px;
   border-radius: 10px;
 }
@@ -31,7 +39,7 @@ h1 {
 h2 {
   font-size: 15px;
   font-weight: 600;
-  color: hsl(75, 94%, 57%);
+  color: var(--green);
   margin: -12px 0 8px 0;
 }
 
@@ -57,7 +65,7 @@ p {
 
 #links a {
   width: 85%;
-  background-color: rgb(39, 39, 39);
+  background-color: var(--grey);
   color: white;
   font-size: 14px;
   text-decoration: none;
@@ -66,11 +74,8 @@ p {
 }
 
 #links :hover {
-  background-color: hsl(75, 94%, 57%);
-  color: hsl(0, 0%, 12%);
+  background-color: var(--green);
+  color: var(--off-black);
   font-weight: 600;
   transition: all 0.3s ease-in-out;
-}
-
-@media screen and (min-width: 375px) {
 }
